--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,3 +1,29 @@
+@import "./vars.css";
+
+/* .App {
+  background-color: var(--color-bg);
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+} */
+
+.navbar-nav ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: flex;
+  gap: 1rem;
+}
+
+.nav-item {
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  gap: 2rem;
+  padding: 0 1rem;
+}
+
 .App {
   text-align: center;
 }
@@ -7,26 +33,32 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
 .App-header {
-  background-color: #282c34;
+  /* background-color: #282c34; */
+  background-color: var(--body_background);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: var(--body_color);
+  /* color: white; */
 }
 
 .App-link {
-  color: #61dafb;
+  color: var(--link_color);
+  /* color: #61dafb; */
 }
+
+
+
 
 @keyframes App-logo-spin {
   from {
@@ -36,3 +68,8 @@
     transform: rotate(360deg);
   }
 }
+
+
+
+
+
