--- a/my-app/src/Components/Item/ItemDisplay.css
+++ b/my-app/src/Components/Item/ItemDisplay.css
@@ -1,10 +1,15 @@
 .container {
-    position: relative;
+    /* position: relative;
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: space-between;
     margin-top: 49px;
     z-index: 1;
     margin-left: 10%;
     margin-right: 10%;
+
+    gap: 8px;
+    font-size: 16px;
+    text-align: center; */
 }
