--- a/my-app/src/Components/Item/ItemStructure.css
+++ b/my-app/src/Components/Item/ItemStructure.css
@@ -4,4 +4,8 @@
     gap: 8px;
     font-size: 16px;
     text-align: center;
+    min-width: 200px;
+    max-width: 200px;
+    min-height: 40px;
+    max-height: 40px;
 }
